--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ version = "0.1.0"
 edition = "2021"
 description = "FS helper"
 license = "GPL-3.0"
+repository = "https://github.com/Hellaeh/hel-fs.git"
